// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render 1 1 1`] = `
<DocumentFragment>
  <audio />
</DocumentFragment>
`;

exports[`Render 2 1 1`] = `
<DocumentFragment>
  <audio
    src=""
  />
</DocumentFragment>
`;
